<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MovieDatabase</string>
    <string name="button_web">View web page</string>
    <string name="button_save">Save</string>
    <string name="title_activity_movie_web">Movie Web Viewer</string>
    <string name="title_activity_movie_detail">Movie Details</string>
    <string name="label_id">Id</string>
    <string name="label_title">Title</string>
    <string name="label_genre">Genre</string>
    <string name="label_url">URL</string>
    <string name="label_watched">Watched</string>
    <string name="label_rating">My Rating</string>
    <string name="menu_add">Add</string>
    <string name="hint_title">Enter a title</string>
    <string name="hint_genre">Enter the genre</string>
    <string name="url_dialog_title">Recently Visited Web Pages</string>
    <string name="button_url">Pick URL</string>
    <string name="cancel_dialog">Cancel</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
