<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/label_id"
        />

    <TextView
        android:id="@+id/idTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/saveButton"
        android:layout_toEndOf="@+id/saveButton"/>

    <EditText
        android:id="@+id/titleEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:hint="@string/hint_title"
        android:layout_below="@+id/idTextView"
        android:layout_alignLeft="@+id/idTextView"
        android:layout_alignStart="@+id/idTextView"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/label_title"
        android:layout_alignTop="@id/titleEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingTop="4dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/label_genre"
        android:layout_alignTop="@+id/genreEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingTop="4dp"/>

    <EditText
        android:id="@+id/genreEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:hint="@string/hint_genre"
        android:layout_below="@+id/titleEditText"
        android:layout_alignLeft="@+id/titleEditText"
        android:layout_alignStart="@+id/titleEditText"/>

    <TextView
        android:id="@+id/urlLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/label_url"
        android:layout_below="@+id/genreEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <EditText
        android:id="@+id/urlEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:inputType="textUri"
        android:layout_below="@+id/urlLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <CheckBox
        android:id="@+id/watchedCheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/label_watched"
        android:layout_below="@+id/urlEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:id="@+id/ratingLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/label_rating"
        android:layout_below="@+id/watchedCheckBox"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <RatingBar
        android:id="@+id/ratingRatingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:stepSize="0.5"
        android:layout_below="@+id/ratingLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_save"
        android:layout_below="@+id/ratingRatingBar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <Button
        android:id="@+id/viewWebButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_web"
        android:layout_below="@+id/saveButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

</RelativeLayout>
